--- a/MazeServ/package.json
+++ b/MazeServ/package.json
@@ -27,7 +27,7 @@
     "dompurify": "^0.8.5",
     "dotenv": "^4.0.0",
     "es6-promisify": "^5.0.0",
-    "express": "^4.15.2",
+    "express": "^4.17.1",
     "express-session": "^1.15.1",
     "express-validator": "^3.1.2",
     "faker": "^4.1.0",
@@ -47,6 +47,7 @@
     "passport-local-mongoose": "^4.0.0",
     "pug": "^2.0.0-beta6",
     "slugs": "^0.1.3",
+    "string-builder": "^0.1.6",
     "uuid": "^3.0.1",
     "validator": "^7.0.0"
   },
